framec_tests/language_specific/typescript/v3_facade_smoke/negative/strict_bad_if_paren.frm
@target typescript

system S {
    machine:
        $A {
            e() {
                -> $B();
                if (x > 1 { } // missing ')'
            }
        }
        $B {
        }
}

